basic project settings

--- a/02-crudo-bootstrap/index.html
+++ b/02-crudo-bootstrap/index.html
@@ -8,6 +8,8 @@
 
   <!-- Own CSS -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+
 
   <!-- customized bootstrap -->
   <link rel="stylesheet" href="./css/my-bootstrap.css">
