--- a/02-crudo-bootstrap/index.html
+++ b/02-crudo-bootstrap/index.html
@@ -21,12 +21,80 @@
 </head>
 
 <body>
-  <!-- Your code goes here-->
-  <h1>Hello World!</h1>
-  <button class="btn btn-primary">button</button>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="./img/logo_black.svg" width="100" height="75" alt="logo">
+      </a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- begin -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav ml-auto">
+
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Restaurant</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Winkel</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Menu</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Coaching</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+
+        </ul>
+
+      </div>
+      <!-- einde -->
 
 
-  <script src="./js/script.js"></script>
+    </div>
+  </nav>
+
+
+
+
+
+  <div id="debug">
+    <style>
+      #debug {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: white;
+        padding: 0.2em;
+        z-index: 1000000;
+      }
+    </style>
+    <span class="d-block d-sm-none">XS</span>
+    <span class="d-none d-sm-block d-md-none">SM</span>
+    <span class="d-none d-md-block d-lg-none">MD</span>
+    <span class="d-none d-lg-block d-xl-none">LG</span>
+    <span class="d-none d-xl-block d-lg-none">XL</span>
+  </div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
 </body>
 
 </html>
