--- a/02-crudo-bootstrap/index.html
+++ b/02-crudo-bootstrap/index.html
@@ -72,6 +72,28 @@
   </nav>
 
 
+  <!-- start jumbotron -->
+  <div class="jumbotron jumbotron-fluid vh-100">
+    <div class="container">
+
+      <div class="embed-responsive embed-responsive-16by9">
+        <div class="embed-responsive-item">
+          <!-- video -->
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/dChIO96qyeM" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <!-- end video-->
+        </div>
+      </div>
+
+
+
+
+
+    </div>
+  </div>
+
+  <!-- end jumbotron -->
+
 
 
 
