--- a/02-crudo-bootstrap/index.html
+++ b/02-crudo-bootstrap/index.html
@@ -9,6 +9,7 @@
   <!-- Own CSS -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.css' />
 
 
   <!-- customized bootstrap -->
@@ -73,7 +74,7 @@
 
 
   <!-- start jumbotron -->
-  <div class="jumbotron jumbotron-fluid vh-100">
+  <div class="jumbotron jumbotron-fluid vh-100 position-relative">
     <div class="container">
 
       <div class="embed-responsive embed-responsive-16by9">
@@ -84,12 +85,23 @@
           <!-- end video-->
         </div>
       </div>
-
-
-
-
-
     </div>
+
+    <div class="social container-fluid position-absolute">
+      <div class="row">
+        <div class="col">
+          <a href="https://www.google.nl/maps/place/Crudo/@51.8458083,5.8647441,15z/data=!4m5!3m4!1s0x0000000000000000:0x399ebed1d55eed6b!8m2!3d51.8463769!4d5.8684909"
+            target="_blank" title="Bekijk Crudo op Google Maps">
+            Burchtstraat 126<br>
+            6511 RK Nijmegen</a>
+
+        </div>
+        <div class="col text-right">
+          <i class="fab fa-facebook"></i>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <!-- end jumbotron -->
