sectie met winkel
de banaan en de winkel zijn er

--- a/02-crudo-bootstrap/index.html
+++ b/02-crudo-bootstrap/index.html
@@ -13,7 +13,7 @@
 
 
   <!-- customized bootstrap -->
-  <link rel="stylesheet" href="./css/my-bootstrap.css">
+  <link rel="stylesheet" href="./css/bootstrap.css">
 
   <!-- my bootstrap theme -->
   <link rel="stylesheet" href="./css/style.css">
@@ -172,6 +172,15 @@
   </section>
 
 
+  <section class="green-background my-3">
+    <div class="container">
+      <div class="row">
+        <img src="./img/winkel.jpg" alt="banaan" class="img-parallax">
+      </div>
+    </div>
+  </section>
+
+
 
   <div id="debug">
     <style>
@@ -193,6 +202,8 @@
   </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
+  <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.2.0/dist/simpleParallax.min.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
