sectie tarwe gras

--- a/02-crudo-bootstrap/index.html
+++ b/02-crudo-bootstrap/index.html
@@ -181,6 +181,36 @@
   </section>
 
 
+  <section class="tarwegras">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 my-3 text-right">
+
+          <h2>Winkel</h2>
+          <p>In onze winkel vind je alles wat je nodig hebt voor het bereiden van lekker plantaardig eten thuis.<br>De
+            lekkere en gezonde alternatieven voor dierlijke producten waar je in ons eetcafé van geniet zijn te
+            verkrijgen in de winkel.<br>We hebben een gedeelte met biologische en fair zero-waste producten die je tapt
+            uit silo’s. De verpakking neem je zelf mee. Op deze manier houden we de belasting op het ecosysteem zo laag
+            mogelijk.</p>
+          <img src="./img/bessen.jpg" class="img-fluid " alt="Crudo bessen">
+
+
+        </div>
+
+        <div class="col-md-6 my-3">
+
+          <img src="./img/tomaat.jpg" class="img-fluid " alt="Crudo tomaat">
+          <h3>Tarwegras &amp; Supplementen</h3>
+          <p>Uit eigen ervaring weten wij dat tarwegras de nummer één op het gebied van gezonde voeding is. We verkopen
+            diverse tarwegras producten, van één vers geperst shot tot een abonnement voor dagelijks vers
+            tarwegras.<br>In de winkel vind je tevens de meest essentiële voedingssupplementen.</p>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
   <div id="debug">
     <style>
