--- a/02-crudo-bootstrap/index.html
+++ b/02-crudo-bootstrap/index.html
@@ -26,7 +26,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="./img/logo_black.svg" width="100" height="75" alt="logo">
+        <img src="./img/logo_black.svg" width="100" height="75" alt="logo" class="logo">
       </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -175,7 +175,7 @@
   <section class="green-background my-3">
     <div class="container">
       <div class="row">
-        <img src="./img/winkel.jpg" alt="banaan" class="img-parallax">
+        <img src="./img/winkel.jpg" alt="banaan" class="img-fluid">
       </div>
     </div>
   </section>
@@ -204,6 +204,72 @@
           <p>Uit eigen ervaring weten wij dat tarwegras de nummer één op het gebied van gezonde voeding is. We verkopen
             diverse tarwegras producten, van één vers geperst shot tot een abonnement voor dagelijks vers
             tarwegras.<br>In de winkel vind je tevens de meest essentiële voedingssupplementen.</p>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="brown-background my-3">
+    <div class="container">
+      <div class="row">
+        <img src="./img/menu.jpg" alt="menu" class="img-fluid">
+      </div>
+    </div>
+  </section>
+
+
+  <section class="price-table">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+
+          <table class="table table-borderless">
+
+            <tbody>
+              <tr>
+                <th>DUTCH WEEDBURGER</th>
+                <td class="text-right">€14,95</td>
+
+              </tr>
+              <tr>
+                <th>ACAI BOWL</th>
+                <td>€14,95</td>
+
+              </tr>
+              <tr>
+                <th>DUTCH WEEDBURGER</th>
+                <td>€14,95</td>
+              </tr>
+            </tbody>
+          </table>
+
+
+
+        </div>
+        <div class="col-md-6">
+
+          <table class="table table-borderless">
+
+            <tbody>
+              <tr>
+                <th>DUTCH WEEDBURGER</th>
+                <td class="text-right">€14,95</td>
+
+              </tr>
+              <tr>
+                <th>ACAI BOWL</th>
+                <td>€14,95</td>
+
+              </tr>
+              <tr>
+                <th>DUTCH WEEDBURGER</th>
+                <td>€14,95</td>
+              </tr>
+            </tbody>
+          </table>
+
 
         </div>
       </div>
