i've written the pricing section

--- a/02-crudo-bootstrap/index.html
+++ b/02-crudo-bootstrap/index.html
@@ -222,6 +222,7 @@
 
   <section class="price-table">
     <div class="container">
+
       <div class="row">
         <div class="col-md-6">
 
@@ -273,6 +274,19 @@
 
         </div>
       </div>
+
+      <div class="row my-5">
+        <div class="col text-center">
+          <p>De populairste en lekkerste gerechten van dit moment! Klik op de button om een voorbeeld te zien van onze
+            menukaart.
+          </p>
+          <p>Wij werken lokaal en dagvers en hebben wisselende day-specials.</p>
+
+          <a href="" class="btn btn-outline-dark">bekijk de volledige menukaart</a>
+
+        </div>
+      </div>
+
     </div>
   </section>
 
