--- a/02-crudo-bootstrap/index.html
+++ b/02-crudo-bootstrap/index.html
@@ -139,7 +139,8 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <img src="./img/eetcafe.jpg" alt="foto bramen" class="w-100 img-fluid">
+          <img src="./img/eetcafe-vrij.png" alt="foto bramen" class="bramen w-100 img-fluid rellax"
+            data-rellax-speed="-1">
         </div>
       </div>
     </div>
@@ -475,7 +476,8 @@
   </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
-  <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.2.0/dist/simpleParallax.min.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js'></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.2.0/dist/simpleParallax.min.js"></script> -->
   <script src="./js/script.js"></script>
 </body>
 
